--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfoliodm",
   "version": "0.1.0",
+  "homepage": "https://dmitrydemidov48.github.io/portfoliodm",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -9,6 +10,7 @@
     "axios": "^1.6.5",
     "dotenv": "^16.4.1",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^6.1.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-create-portal": "^0.5.3",
@@ -21,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
