--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfoliodm",
   "version": "0.1.0",
-  "homepage": "https://dmitrydemidov48.github.io/portfoliodm",
+  "homepage": "https://dmitrydemidov48.github.io/portfoliodm/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
