--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-create-portal": "^0.5.3",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
